--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,23 @@
-version: '3.3'
+version: '3.8'
 services:
+
+  db:
+    image: postgres:13.3-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  backend:
+    build: ../backend/
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
 
   frontend:
     build:
@@ -7,6 +25,9 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -21,5 +42,6 @@ services:
       - frontend
 
 volumes:
+  postgres_data:
   static_value:
   media_value:
