--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,23 @@
 server {
     listen 80;
 
+    location /static/admin/ {
+        root /var/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+
     location /admin/ {
-        proxy_pass http://127.0.0.1:8000/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/admin/;
     }
 
     location /api/docs/ {
@@ -15,7 +30,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://backend:8000;
     }
 
     location / {
