--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./.env
 
   backend:
-    build: ../backend/
+    image: rezi100r/foodgram:v1.0
     restart: always
     volumes:
       - static_value:/app/static/
