--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -87,14 +87,14 @@ jobs:
             docker-compose exec -T backend python manage.py load_tags
             docker-compose exec -T backend python manage.py load_ingredients
             
-#  send_message_telegram:
-#    name: Send message to Telegram
-#    runs-on: ubuntu-latest
-#    needs: deploy
-#    steps:
-#      - name: send message
-#        uses: appleboy/telegram-action@master
-#        with:
-#          to: ${{ secrets.TELEGRAM_TO }}
-#          token: ${{ secrets.TELEGRAM_TOKEN }}
-#          massage: ${{ github.workflow }} успешно выполнен!
+  send_message_telegram:
+    name: Send message to Telegram
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          massage: ${{ github.workflow }} успешно выполнен!
