--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 services:
 
   db:
@@ -9,7 +9,7 @@ services:
       - ./.env
 
   backend:
-    image: rezi100r/foodgram:v1.0
+    image: rezi100r/foodgram_back:latest
     restart: always
     volumes:
       - static_value:/app/static/
@@ -20,9 +20,7 @@ services:
       - ./.env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: rezi100r/foodgram_front:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
