--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+    server_name 84.252.140.254 orphan-practicum.webhop.me localhost;
+    server_tokens off;
+    client_max_body_size 20M;
 
     location /static/admin/ {
         root /var/html/;
